--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     position:absolute;
     height: 100vh;
     width: 25%;
-    background-color: #eee;
+    background-color: #D0B47E;
     z-index: 10;
 }
 
@@ -12,8 +12,19 @@
     margin: 0 auto;
     font-size: 1.3rem;
     padding: 3px;
-    color: #aaa;
+    color: #F0CC87;
     width: 100%;
+}
+.open-list {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    display: none;
+    z-index: 10;
+    background-color: #F0CC87;
+    padding: 5px;
+    font-size: 1.2rem;
+    border: 2px solid #fff;
 }
 
 .venue-list ul {
@@ -24,9 +35,13 @@
     list-style: none;
 }
 
+.venue-list ul li {
+    padding: 5px 0;
+}
+
 .selected-venue {
     color: #eee;
-    background-color: #222;
+    background-color: #332917;
 }
 
 .map-container {
@@ -51,6 +66,19 @@
 @media only screen and (max-width: 400px) {
     .venue-list {
         left: -25%;
+    }
+
+    .venue-list.show {
+        left: 0;
+        width: 40%;
+    }
+
+    .open-list.closed {
+        left: 80%;
+    }
+
+    .open-list {
+        display:block;
     }
     .map-container {
         left: 0;
